# llm-text-compressor

./: AGENTS.md  DEPLOY.md  Dockerfile  LICENSE  README.md  SPECS.md  deploy.sh  docker-compose.yml  pyproject.toml
.github/workflows/: publish.yml  test.yml
api/: .env.example  README.md  main.py  requirements.txt
benchmarks/: results.json  run_benchmark.py
benchmarks/corpus/: chat_conversation.txt  code_mixed.txt  log_output.txt  markdown_doc.txt  prose.txt
src/llm_text_compressor/: __init__.py  compressor.py
tests/: test_compressor.py
