[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llm-text-compressor"
version = "0.1.0"
description = "Remove characters from text while keeping it understandable for LLMs, saving on inference costs."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "avatsaev" },
]
keywords = ["llm", "text", "compression", "inference", "cost"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Text Processing",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/avatsaev/llm-text-compressor"
Repository = "https://github.com/avatsaev/llm-text-compressor"
Issues = "https://github.com/avatsaev/llm-text-compressor/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true
